trying to remove

--- a/TestingNewArch/Base.lproj/Main.storyboard
+++ b/TestingNewArch/Base.lproj/Main.storyboard
@@ -249,26 +249,23 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="JgS-oa-8tD">
-                                                    <rect key="frame" x="0.0" y="30" width="375" height="216"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="216" id="mWp-Yx-DWX"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
                                                     <date key="date" timeIntervalSinceReferenceDate="531422697.94853598">
                                                         <!--2017-11-03 17:24:57 +0000-->
                                                     </date>
                                                 </datePicker>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5MA-PF-fHW">
-                                                    <rect key="frame" x="323" y="30" width="36" height="30"/>
+                                                    <rect key="frame" x="323" y="0.0" width="36" height="30"/>
                                                     <state key="normal" title="Clear"/>
                                                     <connections>
                                                         <action selector="dueDateClearPress:" destination="sMs-Ec-RJE" eventType="touchUpInside" id="DRU-78-1KN"/>
                                                     </connections>
                                                 </button>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Ox0-tR-YOI">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2TQ-Da-VLE">
-                                                            <rect key="frame" x="0.0" y="0.0" width="121.66666666666667" height="30"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="121.66666666666667" height="0.0"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <state key="normal" title="Today"/>
                                                             <connections>
@@ -276,7 +273,7 @@
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iIP-2J-r0w">
-                                                            <rect key="frame" x="126.66666666666666" y="0.0" width="121.66666666666666" height="30"/>
+                                                            <rect key="frame" x="126.66666666666666" y="0.0" width="121.66666666666666" height="0.0"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <state key="normal" title="Tomorrow"/>
                                                             <connections>
@@ -284,7 +281,7 @@
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Tp-py-XjQ">
-                                                            <rect key="frame" x="253.33333333333334" y="0.0" width="121.66666666666666" height="30"/>
+                                                            <rect key="frame" x="253.33333333333334" y="0.0" width="121.66666666666666" height="0.0"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <state key="normal" title="Custom"/>
                                                             <connections>
@@ -292,9 +289,6 @@
                                                             </connections>
                                                         </button>
                                                     </subviews>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="2pQ-MX-FJE"/>
-                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
@@ -318,13 +312,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SaI-pi-J5z">
-                                                    <rect key="frame" x="8" y="11" width="73" height="21"/>
+                                                    <rect key="frame" x="16" y="11" width="73" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" placeholder="None" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="mxl-NQ-08y">
-                                                    <rect key="frame" x="223" y="0.0" width="144" height="43.666666666666664"/>
+                                                    <rect key="frame" x="231" y="0.0" width="128" height="43.666666666666664"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -354,7 +348,7 @@
                                                     </date>
                                                 </datePicker>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8t1-ND-GK1">
-                                                    <rect key="frame" x="331" y="11" width="36" height="30"/>
+                                                    <rect key="frame" x="323" y="11" width="36" height="30"/>
                                                     <state key="normal" title="Clear"/>
                                                     <connections>
                                                         <action selector="dueTimeClearPress:" destination="sMs-Ec-RJE" eventType="touchUpInside" id="kJh-ma-av5"/>
@@ -379,7 +373,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notification" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QNg-WN-akt">
-                                                    <rect key="frame" x="8" y="11" width="88" height="21"/>
+                                                    <rect key="frame" x="16" y="11" width="88" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -407,13 +401,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repeat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZF4-B4-UUU">
-                                                    <rect key="frame" x="8" y="11" width="54" height="21"/>
+                                                    <rect key="frame" x="16" y="11" width="54" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="None" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Fpf-qh-NPM">
-                                                    <rect key="frame" x="322" y="11.666666666666664" width="45" height="21"/>
+                                                    <rect key="frame" x="314" y="11.666666666666664" width="45" height="21"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -539,6 +533,7 @@
                     <navigationItem key="navigationItem" title="Add To Do" id="j7E-Pb-MYy"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="ReminderTitleField" destination="8VE-sy-gLL" id="WrK-4x-7LK"/>
                         <outlet property="cancelButton" destination="sgv-ux-rcF" id="Wew-u2-r6u"/>
                         <outlet property="contextField" destination="zFT-Du-1K5" id="4kE-fO-KFT"/>
                         <outlet property="customButton" destination="0Tp-py-XjQ" id="eHe-7K-C2a"/>
@@ -556,7 +551,6 @@
                         <outlet property="parentField" destination="xQk-fh-27B" id="MRs-N4-Mzd"/>
                         <outlet property="repeatingField" destination="Fpf-qh-NPM" id="RxP-py-924"/>
                         <outlet property="saveButton" destination="OsO-DB-1dV" id="U2a-yi-88U"/>
-                        <outlet property="toDoItemText" destination="8VE-sy-gLL" id="WBg-iA-uLN"/>
                         <outlet property="todayButton" destination="2TQ-Da-VLE" id="Iec-CF-yiX"/>
                         <outlet property="tomorrowButton" destination="iIP-2J-r0w" id="ceP-0t-9hd"/>
                         <outlet property="weeklyRepeatButton" destination="KFn-zX-Bnb" id="Xx6-91-8re"/>
